<resources>
    <string name="app_name">Level4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="subtitle">Instructions: select rock,paper or scissors to play.</string>
    <string name="statistics_top">Your all time statistics</string>
    <string name="statistics">Win: %1$s Draw: %2$s Lose: %3$s</string>
    <string name="vs">V.S.</string>
    <string name="computer">Computer</string>
    <string name="human">You</string>
    <string name="wins">%1$s!</string>
    <string name="outcome">%1$s</string>
    <string name="date">%1$s</string>
    <string name="letsplay">Let\'s play!</string>
</resources>