<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center">
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/tvCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcome"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:textSize="18dp"
            />
        <TextView
            android:id="@+id/tvCardDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="12dp"
            card_view:layout_constraintTop_toBottomOf="@id/tvCardTitle"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/ivCardComputerImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            android:background="@color/purple_700"
            app:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/tvCardVs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="32sp"
            android:textStyle="italic|bold"


            />

        <ImageView
            android:id="@+id/ivCardPlayerImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            android:background="@color/purple_700"
            app:srcCompat="@drawable/paper"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/ivCardComputerImage"
            app:layout_constraintStart_toStartOf="@id/ivCardComputerImage"
            app:layout_constraintEnd_toEndOf="@id/ivCardComputerImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/ivCardPlayerImage"
            app:layout_constraintStart_toStartOf="@id/ivCardPlayerImage"
            app:layout_constraintEnd_toEndOf="@id/ivCardPlayerImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="8dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>