<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/welcome"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/subtitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/line"
        android:layout_width="1000dp"
        android:layout_height="12dp"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/tvStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_top"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvStatsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvWhoWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/letsplay"
        app:layout_constraintTop_toBottomOf="@id/tvStats"
        app:layout_constraintBottom_toTopOf="@id/tvVs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.6"

        />

    <ImageView
        android:id="@+id/ivComputerImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        android:background="@color/purple_700"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/tvVs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:textStyle="italic|bold"


        />

    <ImageView
        android:id="@+id/ivPlayerImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        android:background="@color/purple_700"
        app:srcCompat="@drawable/paper"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/ivComputerImage"
        app:layout_constraintStart_toStartOf="@id/ivComputerImage"
        app:layout_constraintEnd_toEndOf="@id/ivComputerImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/human"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/ivPlayerImage"
        app:layout_constraintStart_toStartOf="@id/ivPlayerImage"
        app:layout_constraintEnd_toEndOf="@id/ivPlayerImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="8dp"
        />

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="110dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivPaper"
        android:layout_marginBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/purple_500"
        app:srcCompat="@drawable/rock"
        />
    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="110dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toStartOf="@id/ivScissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivRock"
        android:layout_marginBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/purple_500"
        app:srcCompat="@drawable/paper"
        />
    <ImageView
        android:id="@+id/ivScissors"
        android:layout_width="110dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPaper"
        android:layout_marginBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/purple_500"
        app:srcCompat="@drawable/scissors"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ivScissors"
        app:layout_constraintStart_toStartOf="@id/ivScissors"
        app:layout_constraintEnd_toEndOf="@id/ivScissors"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_history_white_24dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>